Finished quote service
