# src/types/index.ts
@@ -1,5 +1,8 @@
 export * from './common/log-level';
 export * from './common/chain-id';
+export * from './common/provider';
 
-export * from './liquidity-sources/liquidity-source';
-export * from './liquidity-sources/liquidity-source-info';
+export * from './quote/quote-params';
+export * from './quote/get-swap-quote-request';
+export * from './quote/get-swap-quote-response';
+export * from './quote/swap-quote-liquidity-source';
