# src/types/liquidity-sources/liquidity-source-info.ts
@@ -1,7 +1,0 @@
-import { LiquiditySource } from './liquidity-source';
-
-export interface LiquiditySourceInfo {
-  id: LiquiditySource;
-  name: string;
-  logo: string;
-}
