# src/types/liquidity-sources/liquidity-source.ts
@@ -1,71 +1,0 @@
-export enum LiquiditySource {
-  Native = 'Native',
-  Uniswap = 'Uniswap',
-  UniswapV2 = 'Uniswap_V2',
-  Curve = 'Curve',
-  LiquidityProvider = 'LiquidityProvider',
-  MultiBridge = 'MultiBridge',
-  Balancer = 'Balancer',
-  BalancerV2 = 'Balancer_V2',
-  Cream = 'CREAM',
-  Bancor = 'Bancor',
-  MakerPsm = 'MakerPsm',
-  MStable = 'mStable',
-  Mooniswap = 'Mooniswap',
-  MultiHop = 'MultiHop',
-  Shell = 'Shell',
-  SushiSwap = 'SushiSwap',
-  Dodo = 'DODO',
-  DodoV2 = 'DODO_V2',
-  CryptoCom = 'CryptoCom',
-  KyberDmm = 'KyberDMM',
-  Component = 'Component',
-  Saddle = 'Saddle',
-  XSigma = 'xSigma',
-  UniswapV3 = 'Uniswap_V3',
-  CurveV2 = 'Curve_V2',
-  Lido = 'Lido',
-  ShibaSwap = 'ShibaSwap',
-  AaveV2 = 'Aave_V2',
-  Compound = 'Compound',
-  Synapse = 'Synapse',
-  BancorV3 = 'BancorV3',
-  // BSC only
-  PancakeSwap = 'PancakeSwap',
-  PancakeSwapV2 = 'PancakeSwap_V2',
-  BiSwap = 'BiSwap',
-  MDex = 'MDex',
-  KnightSwap = 'KnightSwap',
-  BakerySwap = 'BakerySwap',
-  Nerve = 'Nerve',
-  Belt = 'Belt',
-  Ellipsis = 'Ellipsis',
-  ApeSwap = 'ApeSwap',
-  CheeseSwap = 'CheeseSwap',
-  ACryptos = 'ACryptoS',
-  // Polygon only
-  QuickSwap = 'QuickSwap',
-  Dfyn = 'Dfyn',
-  WaultSwap = 'WaultSwap',
-  FirebirdOneSwap = 'FirebirdOneSwap',
-  IronSwap = 'IronSwap',
-  MeshSwap = 'MeshSwap',
-  // Avalanche
-  Pangolin = 'Pangolin',
-  TraderJoe = 'TraderJoe',
-  Platypus = 'Platypus',
-  // tslint:disable: enum-naming
-  GMX = 'GMX',
-  // Celo only
-  UbeSwap = 'UbeSwap',
-  MobiusMoney = 'MobiusMoney',
-  // Fantom
-  SpiritSwap = 'SpiritSwap',
-  SpookySwap = 'SpookySwap',
-  Beethovenx = 'Beethovenx',
-  MorpheusSwap = 'MorpheusSwap',
-  Yoshi = 'Yoshi',
-  Geist = 'Geist',
-  // Optimism
-  Velodrome = 'Velodrome',
-}
