# src/types/quote/quote-params.ts
@@ -1,0 +1,9 @@
+export interface QuoteParams {
+  sellToken: string;
+  buyToken: string;
+  sellAmount?: string;
+  buyAmount?: string;
+  takerAddress?: string;
+  slippagePercentage?: string;
+  excludedSources?: string;
+}
